config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-nextapp-container
          image: docker-registry.castle-yein.site/portfolio:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: docker-registry
